Add jQuery TimePicker-addon

--- a/ec/module/ui_form.html
+++ b/ec/module/ui_form.html
@@ -265,6 +265,21 @@
                         </code></pre>
                     </div>
                     <div class="guide-row">
+                        <h2 class="sub-header">Datepicker - Time</h2>                        
+                        <div class="sub-des">
+                            <p>jQuery UI의 datepicker addon으로 날짜와 시간을 함께 선택해야할 때 사용합니다.</p>
+                            해당 기능의 상세한 option 및 사용방법은 <a href="https://trentrichardson.com/examples/timepicker/" target="_blank">Adding a Timepicker to jQuery UI Datepicker</a>를 참고해 주세요.  
+                        </div>
+                        <p>
+                            Date-Time : <span class="ui-date" picker="time"><input type="text" class="datetimepicker" title="calendar" /></span>
+                        </p>
+                    </div>
+                    <div class="guide-code">
+                        <pre><code class="html">
+                            &lt;span class="ui-date"&gt;&lt;input type="text" class="datepicker" title="calendar" /&gt;&lt;/span&gt;                            
+                        </code></pre>
+                    </div>
+                    <div class="guide-row">
                         <h2 class="sub-header">Datepicker - SetDate</h2>
                         <div>
                             <span class="ui-date"><input type="text" class="datepicker" title="calendar" /></span>~
