--- a/ec/inc_header.html
+++ b/ec/inc_header.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/ec/resource/highlight/styles/atom-one-dark-reasonable.css">
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/lib/jquery-ui.min.css" />
+    <link rel="stylesheet" type="text/css" href="/ec/resource/css/lib/jquery-ui-timepicker-addon.css" />
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/style.css" />
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/lib/jquery-ui.edit.css" />
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/ui-template.css" />
@@ -18,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/manual.css" />
     <script src="/ec/resource/js/lib/jquery-1.12.4.min.js" type="text/javascript"></script>
     <script src="/ec/resource/js/lib/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="/ec/resource/js/lib/jquery-ui-timepicker-addon.js" type="text/javascript"></script>
     <script src="/ec/resource/js/lib/jquery.hotkey.js" type="text/javascript"></script>
     <script src="/ec/resource/highlight/highlight.pack.js"></script>
     <script src="/ec/resource/js/ui-template.js" type="text/javascript"></script>
